--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ venv/
 /ref3
 /ref4
 
-
-# ignore all pycahe files
 __pycache__/
 .mypy_cache/
 .pytest_cache/
+node_modules/
+bun.lockb
+tailwind.config.js
+package.json
 *.pyc
