ignore Python cache files

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ venv/
 /ref3
 /ref4
 
-__pycache__/
+app/__pycache__
 .mypy_cache/
 .pytest_cache/
 node_modules/
@@ -15,3 +15,7 @@ bun.lockb
 tailwind.config.js
 package.json
 *.pyc
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
