--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 annotated-types==0.6.0
 anyio==4.2.0
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.5.0
 ecdsa==0.18.0
@@ -10,10 +13,14 @@ fastapi==0.109.1
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
+Jinja2==3.1.3
+linkpreview==0.8.3
+MarkupSafe==2.1.5
 motor==3.3.2
 orjson==3.9.12
 passlib==1.7.4
 pyasn1==0.5.1
+pybase62==1.0.0
 pydantic==2.6.0
 pydantic-settings==2.1.0
 pydantic_core==2.16.1
@@ -22,11 +29,18 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.7
 PyYAML==6.0.1
+redis==5.0.1
+requests==2.31.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.5
 starlette==0.35.1
+termcolor==2.4.0
 typing_extensions==4.9.0
+ua-parser==0.18.0
+urllib3==2.2.1
+user-agents==2.2.0
 uvicorn==0.27.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
