--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,68 @@
+amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
+billiard==4.2.0
+celery==5.3.6
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 dnspython==2.5.0
 ecdsa==0.18.0
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.109.1
+flower==2.0.1
 h11==0.14.0
 httptools==0.6.1
+humanize==4.9.0
 idna==3.6
 Jinja2==3.1.3
+kombu==5.3.5
 linkpreview==0.8.3
 MarkupSafe==2.1.5
 motor==3.3.2
+numpy==1.26.4
 orjson==3.9.12
+pandas==2.2.1
 passlib==1.7.4
+pillow==10.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
 pyasn1==0.5.1
 pybase62==1.0.0
 pydantic==2.6.0
 pydantic-settings==2.1.0
 pydantic_core==2.16.1
 pymongo==4.6.1
+python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.7
+pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
 rsa==4.9
+segno==1.6.1
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 starlette==0.35.1
 termcolor==2.4.0
+tornado==6.4
 typing_extensions==4.9.0
+tzdata==2024.1
 ua-parser==0.18.0
 urllib3==2.2.1
 user-agents==2.2.0
 uvicorn==0.27.0.post1
 uvloop==0.19.0
+vine==5.1.0
 watchfiles==0.21.0
+wcwidth==0.2.13
 websockets==12.0
