--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+Deprecated==1.2.14
 dnspython==2.5.0
 ecdsa==0.18.0
 email-validator==2.1.0.post1
@@ -21,13 +22,16 @@ h11==0.14.0
 httptools==0.6.1
 humanize==4.9.0
 idna==3.6
+importlib_resources==6.3.0
 Jinja2==3.1.3
 kombu==5.3.5
+limits==3.10.0
 linkpreview==0.8.3
 MarkupSafe==2.1.5
 motor==3.3.2
 numpy==1.26.4
 orjson==3.9.12
+packaging==23.2
 pandas==2.2.1
 passlib==1.7.4
 pillow==10.2.0
@@ -50,6 +54,7 @@ requests==2.31.0
 rsa==4.9
 segno==1.6.1
 six==1.16.0
+slowapi==0.1.9
 sniffio==1.3.0
 soupsieve==2.5
 starlette==0.35.1
@@ -66,3 +71,4 @@ vine==5.1.0
 watchfiles==0.21.0
 wcwidth==0.2.13
 websockets==12.0
+wrapt==1.16.0
