Add Redis cache and update database configuration

--- a/app/core/config/.env
+++ b/app/core/config/.env
@@ -1,1 +1,12 @@
 SECRET_KEY = 'secret'
+DEBUG = True
+ALLOWED_HOSTS = ['*']
+MONGO_URI = 'mongodb://localhost:27017/'
+REDIS_URL = 'redis://localhost:6379/0'
+CELERY_BROKER_URL = 'redis://localhost:6379/0'
+CELERY_RESULT_BACKEND = 'redis://localhost:6379/0'
+
+    # MONGO_URI: str = config("MONGO_URI", default="mongodb://mongo:27017/")
+    #     REDIS_URL: str = config("REDIS_URL", default="redis://redis:6379/0")
+    #         CELERY_BROKER_URL: str = config("CELERY_BROKER_URL", default="redis://redis:6379/0")
+    # CELERY_RESULT_BACKEND: str = config("CELERY_RESULT_BACKEND", default="redis://redis:6379/0")
