Fix Redis URL in config

--- a/app/core/config/.env
+++ b/app/core/config/.env
@@ -2,7 +2,8 @@ SECRET_KEY = 'secret'
 DEBUG = True
 ALLOWED_HOSTS = ['*']
 MONGO_URI = 'mongodb://localhost:27017/'
-REDIS_URL = 'redis://localhost:6379/0'
+REDIS_URL = 'localhost:6379/0'
+REDIS_URI = 'redis://localhost:6379/0'
 CELERY_BROKER_URL = 'redis://localhost:6379/0'
 CELERY_RESULT_BACKEND = 'redis://localhost:6379/0'
 
