Update Redis configuration and dependencies

--- a/app/core/config/.env
+++ b/app/core/config/.env
@@ -3,9 +3,10 @@ DEBUG = True
 ALLOWED_HOSTS = ['*']
 MONGO_URI = 'mongodb://localhost:27017/'
 REDIS_URL = 'localhost:6379/0'
-REDIS_URI = 'redis://localhost:6379/0'
+REDIS_URI = 'localhost:6379/0'
 CELERY_BROKER_URL = 'redis://localhost:6379/0'
 CELERY_RESULT_BACKEND = 'redis://localhost:6379/0'
+REDIS_HOST = "localhost"
 
     # MONGO_URI: str = config("MONGO_URI", default="mongodb://mongo:27017/")
     #     REDIS_URL: str = config("REDIS_URL", default="redis://redis:6379/0")
